# TrustStack-Data-Perimeter-Security-Packages

./: .dockerignore  .envrc.example  .gitignore  .prettierignore  Dockerfile  README.md  Taskfile.dist.yml  deployment-manifest.example.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json
.cursor/rules/: add-security-package.mdc  cloudformation-resources-typescript-types.mdc  e2e-tests-generation.mdc  lambda-function-handlers.mdc  markdown-cursor-format.mdc  project-overview.mdc  python-documentation-strings.mdc  python-type-annotations.mdc  rule-of-rules.mdc  shared-ssm-parameters-for-e2e-tests.mdc  typescript-style-guide.mdc  unit-tests-generation.mdc
apps/architecture-diagrams/: BUILD  Taskfile.yml  diagram.py  pants.toml  pylint.rc  pyproject.toml  pyrightconfig.json
apps/e2e-tests/: .gitignore  README.md  package.json
apps/engine/: cdk.json  jest.config.js  package.json
apps/security-controls/: .gitignore  README.md  (+4 more)
docs/: DATA_PERIMETER_GUIDELINES.md  LOCAL_DEVELOPMENT_GUIDE.md  MARKDOWN_CURSOR_FORMAT.md  TASKS.md  data-perimeter-guidelines.md  deployment-guide.md  development-guide.md  local-development-guide.md  user-guide.md
scripts/: cdk-bootstrap.sh  cfn-schema-to-ts.ts  deploy.sh  eslint.config.mjs  package.json  tsconfig.json
tasks/: Taskfile.ci.yml  Taskfile.dev.yml  Taskfile.e2e.yml  Taskfile.engine.yml  Taskfile.scripts.yml  Taskfile.security-controls.yml  Taskfile.security-packages.yml
types/: aws-security-hub-events.d.ts  cfn-hooks.d.ts  cfn-response.d.ts  cloudtrail-events.d.ts  service-control-policy.d.ts
(+1437 files in other folders)
